Various view updates

--- a/app/views/site_pages/about.html.haml
+++ b/app/views/site_pages/about.html.haml
@@ -10,9 +10,7 @@
 
 %p The site continues to help English teachers in Japan find games, activities, worksheets, and other materials for their classes. Many kind teachers have signed up and contributed their own creations. ALTopedia is entirely free to use and join. The site deliberately doesn't have any advertising, full-screen pop-ups, or other annoyances of the modern web. The site is independently owned and operated by Jake, and the only priority is to serve the users as well as possible.
 
-%p The current long-term development plans are to improve the site's interface and search functionality. Later in the fall, it will be possible to help the site out with financial contributions, but this will be completely voluntary.
-
-%p Please take a look around and see what you can find!
+%p Take a look around and see what you can find!
 
 %p= link_to "Please get in touch if you have any questions or concerns!", contact_path
 
