--- a/app/views/site_pages/contribute.html.haml
+++ b/app/views/site_pages/contribute.html.haml
@@ -7,6 +7,10 @@
 %h4= link_to t('.submit-activity-link-heading'), new_activity_path
 %p= t('.submit-activity-explanation')
 
+%h4= link_to t('.patreon-link-heading'), "https://www.patreon.com/altopedia"
+%p= t('.patreon-explanation')
+%p= link_to t('.ko-fi-explanation'), "https://www.ko-fi.com/altopedia"
+
 %h5= link_to t('.textbook-info-heading'), contact_path
 %p= t('.textbook-info-explanation')
 
