--- a/app/views/site_pages/online_teaching.html.haml
+++ b/app/views/site_pages/online_teaching.html.haml
@@ -8,11 +8,11 @@
     %h4 Tools
     %ul
       %li
-        %span= link_to "Wheel Decide", "https://www.wheeldecide.com"
+        %span= link_to "Wheel of Names", "https://wheelofnames.com"
         %span - This site lets you make a spinning wheel that randomly chooses one item. Good for choosing warm-up questions or picking a student at random.
       %li
-        %span= link_to "Wheel of Names", "https://wheelofnames.com"
-        %span - Similar to Wheel Decide, but with a little more fanfare.
+        %span= link_to "Jeopardy Labs", "https://jeopardylabs.com"
+        %span - Create Jeopardy-style quizzes in a web browser. The site is quite robust and has a lot of features.
       %li
         %span= link_to "Kahoot", "https://kahoot.com"
         %span - A popular site that lets you make real-time quiz games. Each student needs their own computer or tablet.
