--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -35,6 +35,9 @@
             %h5.card-title= link_to "Breaking News English", "https://breakingnewsenglish.com/", class: "card-link"
             %p This site takes recent world news articles and generates exercises based on them. Useful for students high school age or older.
           %li.list-group-item
+            %h5.card-title= link_to "Jeopardy Labs", "https://jeopardylabs.com", class: "card-link"
+            %p Make your own Jeopardy quizzes in a web browser. You can set the number of teams or download your quizzes for offline use.
+          %li.list-group-item
             %h6= link_to "Bingo Bongo Kids", "https://www.bingobongokids.com/"
             %h6= link_to "iSL Collective", "https://en.islcollective.com"
             %h6= link_to "FlatIcon", "https://www.flaticon.com/"
@@ -51,9 +54,13 @@
             %h6= link_to "AccessJ", "http://www.accessj.com"
             %h6= link_to "Kumamoto JET US Tax guide", "http://kumamotojet.com/shin/index.php/living-in-kumamoto/u-s-tax-guide/"
   .col-lg-6.col-sm-10.mb-2
-    %h4.text-center Blogs
+    %h4.text-center Blogs and Such
     .card.box-shadow
       .card-body
         %ul.list-group.list-group-flush
           %li.list-group-item
+            %h5.card-title= link_to "Let's Speak English", "https://www.marycagle.com/", class: "card-link"
+            %p A very cute webcomic about the life of an ALT who taught in Miyagi.
+          %li.list-group-item
+            %h6= link_to "The Geordie Gaijin", "https://thegeordiegaijin.wordpress.com"
             %h6= link_to "TEFLtastic", "https://tefltastic.wordpress.com/"
