--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,7 +10,7 @@
 .row
   .col-md-8.col-sm-12.primary-content
     .site-banner
-      = image_tag "ALTopedia banner Halloween.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
+      = image_tag "Altopedia banner.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
       %p= t('.site-tagline')
     .news-posts
       .card.main-post
@@ -33,24 +33,24 @@
         .col-sm-12.col-md-6
           = render partial: 'activities/compact_activity_list', locals: { label: t('.top-10-activities'), activity_list: @top10, show_upvote_count: true }
   .col-md-4.col-sm-12.secondary-content
-    = render 'tag_of_the_moment'
+    -# = render 'tag_of_the_moment'
     .crowdfunding
       .card.mt-2
         .card-body
           %h5 Help keep the site running!
-          %p ALTopedia is ad-free and independent. You can now help pay for the server costs, if you like:
+          %p ALTopedia is ad-free and independent. You can help out with the server costs by donating to the site through:
           %h5= link_to "Patreon", "https://www.patreon.com/altopedia"
           %h5= link_to "Ko-fi", "https://www.ko-fi.com/altopedia"
-          %p This is voluntary, of course, but greatly appreciated!
-    -# .signup-reminder
-    -#   .card.mt-2
-    -#     .card-body
-    -#       %h5 You can help!
-    -#       %p Do you have a good game or activity you'd like to share? Want to give some advice or thank someone for their activity?
-    -#       %p
-    -#         %span= link_to "Contribute to ALTopedia", contribute_path
-    -#         %span or
-    -#         %span= link_to "sign up!", new_user_path
+          %p More perks will come to donors soon!
+    .signup-reminder
+      .card.mt-2
+        .card-body
+          %h5 You can help!
+          %p Do you have a good game or activity you'd like to share? Want to give some advice or thank someone for their activity?
+          %p
+            %span= link_to "Contribute to ALTopedia", contribute_path
+            %span or
+            %span= link_to "sign up!", new_user_path
     -# .guide-callout
     -#   .card.mt-2
     -#     .card-body
