Update the Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -11,9 +11,6 @@
       .card-body
         %ul.list-group.list-group-flush
           %li.list-group-item
-            %h5.card-title= link_to "Englipedia archive", "http://englipedia.co/www.englipedia.net/Pages/default.html", class: "card-link"
-            %p Englipedia was the biggest resource for English-teaching resources until its sunset in 2018. The archive won't be around forever, but give it a check if you like!
-          %li.list-group-item
             %h6= link_to "Akita JET teaching resources", "http://akitajet.com/wiki/Teaching_resources"
             %h6= link_to "Kobe JET", "https://www.kobejet.com"
             %h6= link_to "ALT Wiki", "https://www.altwiki.net"
@@ -45,12 +42,14 @@
             %h6= link_to "TeachThis", "http://teachthis.com"
             %h6= link_to "Teachers Pay Teachers", "https://teacherspayteachers.com"
             %h6= link_to "English Grammar Online", "https://www.ego4u.com/en/cram-up/grammar"
+            %h6= link_to "Flagpedia", "https://flagpedia.net"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Living in Japan
     .card.box-shadow
       .card-body
         %ul.list-group.list-group-flush
           %li.list-group-item
+            %h6= link_to "AJET Connect Magazine", "https://issuu.com/ajetconnect"
             %h6= link_to "AccessJ", "http://www.accessj.com"
             %h6= link_to "Kumamoto JET US Tax guide", "http://kumamotojet.com/shin/index.php/living-in-kumamoto/u-s-tax-guide/"
   .col-lg-6.col-sm-10.mb-2
