--- a/app/views/textbooks/_form.html.haml
+++ b/app/views/textbooks/_form.html.haml
@@ -6,5 +6,6 @@
         = f.text_field :name, placeholder: "Textbook name", class: 'form-control'
         = f.text_area :additional_info, placeholder: "Textbook information", class: 'form-control'
         = f.select :level, Textbook.levels.map { |key, value| [key, key] }, {}, class: 'form-control'
+        = f.text_field :year_published, class: 'form-control'
         = f.submit "Submit", class: "btn btn-primary"
 
