--- a/app/views/textbooks/index.html.haml
+++ b/app/views/textbooks/index.html.haml
@@ -9,7 +9,7 @@
   - @textbooks.each do |textbook|
     .card
       .card-body
-        %h5.card-title= link_to textbook.name, textbook
+        %h5.card-title= link_to textbook.name_for_lists, textbook
         .card-text= textbook.additional_info
 
 %p= link_to t('.get-in-touch'), contact_path
