Update Tag of the Moment

--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,5 +1,5 @@
 .card.mt-2
   .card-body
-    %h5 Trick or treat!
-    %p Looking for Halloween activities?
-    %h6.text-center= link_to "The Halloween tag", tag_path(52), class: "text-center btn btn-success"
+    %h5 Do you have an English Board at your school?
+    %p There's a new tag for English Board activities. If you have anything that's worked well for you (even just a picture!) then feel free to share it!
+    %h6.text-center= link_to "English Board tag", tag_path(125), class: "text-center btn btn-success"
