--- a/app/views/activities/_activity_form.html.haml
+++ b/app/views/activities/_activity_form.html.haml
@@ -28,13 +28,22 @@
     %h4= t('.tag_heading')
     %p= t('.tag_directions_1')
     %p= t('.tag_directions_2')
-    %p 
-    - @tag_categories.each do |category|
-      .tag-block.col-md-4
-      %h5= category.name
-      %ul
-        = f.collection_check_boxes :tag_ids, category.tags, :id, :name_for_lists do |tag_item|
-          %li #{tag_item.check_box class: "form-check-input"} #{markdown(tag_item.label class: "form-check-label")}
+    %p
+    .container
+      .accordion{"id" => "accordionCategory"} 
+        - @tag_categories.each do |category|
+          .card
+            .card-header{"id" => "heading-#{category.name}"}
+              %h5.mb-0
+                %button.btn.btn-link.btn-block.text-left.collapsed{"data-toggle" => "collapse", "data-target" => "#collapse-category-#{category.id}",
+                                      "aria-expanded" => "false", "aria-controls" => "collapse-category-#{category.id}", "type" => "button"}
+                  %h5= category.name
+            %div.collapse{ "id" => "collapse-category-#{category.id}", "aria-labelledby" => "heading-#{category.name}", "data-parent" => "#accordionCategory" }
+              .card-body
+                .container
+                  %div.category-tag-grid.btn-group-toggle{"data-toggle" => "buttons"}
+                    = f.collection_check_boxes :tag_ids, category.tags, :id, :name_for_lists do |tag_item|
+                      %li.btn.btn-primary.category-tag-grid-item{"aria-pressed" => "false"} #{tag_item.check_box class: "form-check-input"} #{markdown(tag_item.label class: "form-check-label")}
     %h3= t('.file-heading')
     - if @activity.documents.attached?
       .edit-attached-files-list.mb-2
