--- a/app/views/activities/_activity_form.html.haml
+++ b/app/views/activities/_activity_form.html.haml
@@ -38,12 +38,13 @@
                 %button.btn.btn-link.btn-block.text-left.collapsed{"data-toggle" => "collapse", "data-target" => "#collapse-category-#{category.id}",
                                       "aria-expanded" => "false", "aria-controls" => "collapse-category-#{category.id}", "type" => "button"}
                   %h5= category.name
+              %ul.selected-list{"id" => "selected_items-#{category.id}"}
             %div.collapse{ "id" => "collapse-category-#{category.id}", "aria-labelledby" => "heading-#{category.name}", "data-parent" => "#accordionCategory" }
               .card-body
                 .container
                   %div.category-tag-grid.btn-group-toggle{"data-toggle" => "buttons"}
                     = f.collection_check_boxes :tag_ids, category.tags, :id, :name_for_lists do |tag_item|
-                      %li.btn.btn-primary.category-tag-grid-item{"aria-pressed" => "false"} #{tag_item.check_box class: "form-check-input"} #{markdown(tag_item.label class: "form-check-label")}
+                      %li.btn.btn-primary.category-tag-grid-item{"aria-pressed" => "false", "onClick" => "handleTagClick(this)"} #{tag_item.check_box class: "form-check-input"} #{markdown(tag_item.label class: "form-check-label")}
     %h3= t('.file-heading')
     - if @activity.documents.attached?
       .edit-attached-files-list.mb-2
