Add a link to the Apple touch icon favico

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     = content_for?(:head) ? yield(:head) : ''
     <script src='https://www.google.com/recaptcha/api.js'></script>
     = favicon_link_tag asset_path('favicon.ico')
+    = favicon_link_tag asset_path('apple-touch-icon.png'), rel: 'apple-touch-icon'
   %body.bg-light
     .site-header
       = render 'layouts/header' 
