--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,7 +7,10 @@
     .card.col-sm-8.col-md-6.col-lg-3
       .card-body
         %span.font-weight-bold= link_to "#{user.username} (#{user.activity_count})", user
-        %small= user.created_at.strftime("%B %d")
+        %small= user.created_at.strftime("%b %d")
+        %small
+          - if user.trusted?
+            (T)
 = paginate @all_users
 
 %h4= t('.moderators')
