--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,7 +10,7 @@
 .row
   .col-md-8.col-sm-12.primary-content
     .site-banner
-      = image_tag "ALTopedia banner Xmas.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
+      = image_tag "ALTopedia banner New Years.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
       %p= t('.site-tagline')
     .news-posts
       .card.main-post
