--- a/app/views/site_pages/_tag_of_the_moment.html.haml
+++ b/app/views/site_pages/_tag_of_the_moment.html.haml
@@ -1,5 +1,5 @@
 .card.mt-2
   .card-body
-    %h5 Happy New Year!
-    %p Back from winter vacation?
-    %h6.text-center= link_to "The New Years tag", tag_path(49), class: "text-center btn btn-success"
+    %h5 Classroom Cupid
+    %p 
+    %h6.text-center= link_to "The Valentine's Day tag", tag_path(49), class: "text-center btn btn-success"
