--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,7 +10,7 @@
 .row
   .col-md-8.col-sm-12.primary-content
     .site-banner
-      = image_tag "Altopedia banner.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
+      = image_tag "ALTopedia banner Valentines Day.png", height: '100', class: "img-fluid d-block mx-auto", alt: "ALTopedia"
       %p= t('.site-tagline')
     .news-posts
       .card.main-post
@@ -33,7 +33,7 @@
         .col-sm-12.col-md-6
           = render partial: 'activities/compact_activity_list', locals: { label: t('.top-10-activities'), activity_list: @top10, show_upvote_count: true }
   .col-md-4.col-sm-12.secondary-content
-    -# = render 'tag_of_the_moment'
+    = render 'tag_of_the_moment'
     .crowdfunding
       .card.mt-2
         .card-body
@@ -43,15 +43,15 @@
           %h5= link_to "Ko-fi", "https://www.ko-fi.com/altopedia"
           %small (Note: Currently I'm having issues converting Ko-fi donations into Paypal balance. Please try to use Patreon if you can!)
           %p More perks will come to donors soon!
-    .signup-reminder
-      .card.mt-2
-        .card-body
-          %h5 You can help!
-          %p Do you have a good game or activity you'd like to share? Want to give some advice or thank someone for their activity?
-          %p
-            %span= link_to "Contribute to ALTopedia", contribute_path
-            %span or
-            %span= link_to "sign up!", new_user_path
+    -# .signup-reminder
+    -#   .card.mt-2
+    -#     .card-body
+    -#       %h5 You can help!
+    -#       %p Do you have a good game or activity you'd like to share? Want to give some advice or thank someone for their activity?
+    -#       %p
+    -#         %span= link_to "Contribute to ALTopedia", contribute_path
+    -#         %span or
+    -#         %span= link_to "sign up!", new_user_path
     -# .guide-callout
     -#   .card.mt-2
     -#     .card-body
