Add a Special Needs section

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -42,5 +42,6 @@
     = link_to t('layouts.es'), es_path, class: "nav-link active"
     = link_to t('layouts.jhs'), jhs_path, class: "nav-link active"
     = link_to t('layouts.hs'), hs_path, class: "nav-link active"
-    = link_to "Online Teaching", online_teaching_path, class: "nav-link active"
+    = link_to t('layouts.special-needs'), special_needs_path, class: "nav-link active"
+    = link_to t('lyaouts.online-teaching'), online_teaching_path, class: "nav-link active"
     
