--- a/app/views/activities/_school_level_activity_list.html.haml
+++ b/app/views/activities/_school_level_activity_list.html.haml
@@ -13,8 +13,9 @@
   .col-sm-10.col-md-3.pt-2
     %h4.text-center Textbooks
     %ul
-      - @textbooks.each do |textbook|
-        %li= link_to textbook.name_for_lists, textbook
+      - unless @textbooks.nil?
+        - @textbooks.each do |textbook|
+          %li= link_to textbook.name_for_lists, textbook
 
     = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.top-10-activities'), activity_list: @top10, show_upvote_count: true }
     -# = render partial: 'activities/compact_activity_list', locals: { label: t('activities.school-level-listing.warm-ups'), activity_list: @warmups, show_upvote_count: true }
