--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -43,6 +43,7 @@
             %h6= link_to "Teachers Pay Teachers", "https://teacherspayteachers.com"
             %h6= link_to "English Grammar Online", "https://www.ego4u.com/en/cram-up/grammar"
             %h6= link_to "Flagpedia", "https://flagpedia.net"
+            %h6= link_to "Tay's Teaching Toolkit", "https://www.taysteachingtoolkit.com"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Living in Japan
     .card.box-shadow
