Update Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -14,10 +14,9 @@
             %h6= link_to "Akita JET teaching resources", "http://akitajet.com/wiki/Teaching_resources"
             %h6= link_to "Kobe JET", "https://www.kobejet.com"
             %h6= link_to "ALT Wiki", "https://www.altwiki.net"
-            %h6= link_to "English Web Book", "http://www.englishwebbook.com"
+            -# %h6= link_to "English Web Book", "http://www.englishwebbook.com"
             %h6= link_to "A Fox in Japan", "http://www.afoxinjapan.com"
             %h6= link_to "Let's Teach English", "http://www.letsteachenglish.com"
-            %h6= link_to "Kumamoto JET Wiki", "http://kumamotojet.com/mw/index.php?title=Main_Page"
             %h6= link_to "ALT(er)native teaching", "https://alternativeteaching.school.blog"
             %h6= link_to "Jenerally Jen", "https://jenerallyjen.wordpress.com/"
   .col-lg-6.col-sm-10.mb-2
@@ -44,6 +43,7 @@
             %h6= link_to "English Grammar Online", "https://www.ego4u.com/en/cram-up/grammar"
             %h6= link_to "Flagpedia", "https://flagpedia.net"
             %h6= link_to "Tay's Teaching Toolkit", "https://www.taysteachingtoolkit.com"
+            %h6= link_to "All ESL", "https://allesl.com"
   .col-lg-6.col-sm-10.mb-2
     %h4.text-center Living in Japan
     .card.box-shadow
