--- a/app/views/tag_searches/_new.html.haml
+++ b/app/views/tag_searches/_new.html.haml
@@ -14,9 +14,9 @@
             .container
               %div.category-tag-grid.btn-group-toggle{ "data-toggle" => "buttons" }
                 = collection_check_boxes(:tag, :tag_ids, category.tags, :id, :name_for_lists) do |tag|
-                  %label.btn.category-tag-grid-item.btn-success{"aria-pressed" => "false", "data-bs-toggle" => "tooltip", "data-bs-placement" => "bottom", "title" => "#{Tag.find(tag.value).description}", "container" => 'body'}
-                    %p= tag.text
-                    %input{"class" => "form-check-input", "type" => "checkbox", "name" => "tag[tag_ids][]", "id" => "tag_tag_ids_#{tag.value}", "data-id" => "#{category.id}", "data-text" => "#{tag.text}", "value" => "#{tag.value}"}
+                  %label.btn.category-tag-grid-item.btn-success{"aria-pressed" => "false", "data-bs-toggle" => "tooltip", "data-bs-placement" => "bottom", "title" => "#{tag.text.split('##')[1]}", "container" => 'body'}
+                    %p= tag.text.split('##')[0]
+                    %input{"class" => "form-check-input", "type" => "checkbox", "name" => "tag[tag_ids][]", "id" => "tag_tag_ids_#{tag.value}", "data-id" => "#{category.id}", "data-text" => "#{tag.text.split('##')[0]}", "value" => "#{tag.value}"}
   .container
   =submit_tag "Search", class: "btn btn-primary"
     
