Fix a bug in the header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -43,5 +43,5 @@
     = link_to t('layouts.jhs'), jhs_path, class: "nav-link active"
     = link_to t('layouts.hs'), hs_path, class: "nav-link active"
     = link_to t('layouts.special-needs'), special_needs_path, class: "nav-link active"
-    = link_to t('lyaouts.online-teaching'), online_teaching_path, class: "nav-link active"
+    = link_to t('layouts.online-teaching'), online_teaching_path, class: "nav-link active"
     
