added notice to grammar tags category when three or more tags are selected

--- a/app/assets/stylesheets/tag_searches.scss
+++ b/app/assets/stylesheets/tag_searches.scss
@@ -41,3 +41,12 @@
 .btn-active:hover {
     background-color: brown;
 }
+
+.danger-list li {
+    color: #dc3545;
+}
+
+#grammar-tags-notice {
+    font-size: 1.2rem;
+    color: #dc3545;
+}
